--- a/index.html
+++ b/index.html
@@ -30,9 +30,19 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">My beautiful wife 💞</span><br>
-                    <span class="say">Happy Birthday 🎈</span><br>
-                    <span class="say">May Allah bless you 🍀</span><br>
+                    <span class="say">My beautiful love 💞</span><br>
+					<span class="say">Mừng ngày Phụ nữ Việt Nam 20/10 nhé! 🎈</span><br>
+					<span class="say">Thời gian qua, em đã luôn nỗ lực và cố gắng thật nhiều 🍀</span><br>
+					<span class="say">Mỗi ngày trôi qua, em lại trưởng thành hơn...</span><br>
+					<span class="say">Và chính điều đó khiến anh càng yêu em nhiều hơn ❤️</span><br>
+					<span class="say">Tình yêu anh dành cho em...</span><br>
+					<span class="say">Cũng lớn dần lên từng ngày, mãnh liệt và sâu đậm 😘</span><br>
+					<span class="say">Anh yêu em – yêu cách em sống, cách em yêu thương thế giới này</span><br>
+					<span class="say">Yêu cách em đối mặt với mọi thử thách</span><br>
+					<span class="say">Yêu cách em mạnh mẽ vượt qua tất cả</span><br>
+					<span class="say">Chính những điều đó tạo nên một phiên bản đặc biệt của em ✨</span><br>
+					<span class="say">Một người phụ nữ duy nhất và tuyệt vời trong trái tim anh 💖</span><br>
+
                     <span class="say">And give u many happiness 💕</span><br>
                     <span class="say">I loved you ❤️</span><br>
                     <span class="say">And I will always love u 🥺 ❤️</span><br>
