--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>HBD love</title>	    
+    <title>Women day</title>	    
     <link type="text/css" rel="stylesheet" href="./file/default.css">
     <script type="text/javascript" src="./file/jquery.min.js"></script>
     <script type="text/javascript" src="./file/jscex.min.js"></script>
@@ -35,22 +35,18 @@
 					<span class="say">Thời gian qua, em đã luôn nỗ lực và cố gắng thật nhiều 🍀</span><br>
 					<span class="say">Mỗi ngày trôi qua, em lại trưởng thành hơn...</span><br>
 					<span class="say">Và chính điều đó khiến anh càng yêu em nhiều hơn ❤️</span><br>
-					<span class="say">Tình yêu anh dành cho em...</span><br>
-					<span class="say">Cũng lớn dần lên từng ngày, mãnh liệt và sâu đậm 😘</span><br>
 					<span class="say">Anh yêu em – yêu cách em sống, cách em yêu thương thế giới này</span><br>
 					<span class="say">Yêu cách em đối mặt với mọi thử thách</span><br>
 					<span class="say">Yêu cách em mạnh mẽ vượt qua tất cả</span><br>
 					<span class="say">Chính những điều đó tạo nên một phiên bản đặc biệt của em ✨</span><br>
 					<span class="say">Một người phụ nữ duy nhất và tuyệt vời trong trái tim anh 💖</span><br>
-
-                    <span class="say">And give u many happiness 💕</span><br>
                     <span class="say">I loved you ❤️</span><br>
                     <span class="say">And I will always love u 🥺 ❤️</span><br>
                     <span class="say">Hope u have a great day today ❤️😘</span><br>
                 </div>
             </div>
             <div id="clock-box">
-                <span id="clock">577 days 0 hours 0 minutes 0 seconds</span> <!-- Change to "6940 days..." if needed -->
+                <span id="clock">78 days 0 hours 0 minutes 0 seconds</span> <!-- Change to "6940 days..." if needed -->
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
         </div>
